switched back to master and replaced old image